tests/snapshots/tbir__sync_fifo_emitted_cpp.snap
---
source: tests/tbir.rs
expression: "emit_fixture_cpp(\"sync_fifo_test.harc\")"
---
// Auto-generated by harc — do not edit.
// Codegen: tbir (TB-IR loop-switch backend).
// HARC test: SyncFifoTest

#ifdef __clang__
#pragma clang optimize off
#endif

#include "VTxQueue.h"
#include "verilated.h"
#if VM_COVERAGE
#include "verilated_cov.h"
#endif
#if defined(HARC_TRACE_VCD)
#include "verilated_vcd_c.h"
#define HARC_TRACE_ENABLED 1
using HarcTraceC = VerilatedVcdC;
#elif defined(HARC_TRACE_FST)
#include "verilated_fst_c.h"
#define HARC_TRACE_ENABLED 1
using HarcTraceC = VerilatedFstC;
#else
#define HARC_TRACE_ENABLED 0
#endif
#include <cstdio>
#include <cstdint>
#include <cstdlib>
#include <cstdarg>
#include <cstring>
#include <string>
#include <array>
#include <vector>
#include <deque>
#include <functional>
#include <thread>
#include <atomic>
#include "harc_thread_rt.h"
#include "harc_random_rt.h"
#include "harc_queue_rt.h"
#include "harc_trace_rt.h"
#include "harc_log_rt.h"

template<typename DUT>
static void _harc_eval_negedge(DUT* dut) {
    if constexpr (requires { dut->clk; }) { dut->clk = 0; }
    dut->eval();
}
template<typename DUT>
static void _harc_eval_posedge(DUT* dut) {
    if constexpr (requires { dut->clk; }) { dut->clk = 1; }
    dut->eval();
}

static harc_rt::random::HarcRng harc_rng;
static inline uint64_t harc_rng_next() {
    return harc_rng.next();
}

struct FifoCov {
    struct {
        uint64_t yes = 0;
        uint64_t no = 0;
    } cp_empty;
    struct {
        uint64_t yes = 0;
        uint64_t no = 0;
    } cp_full;
    uint64_t _auto_cross_cp_empty__cp_full[2][2] = {};

    void report() const {
        uint64_t _total = 4; uint64_t _hit = 0;
        if (cp_empty.yes > 0) _hit++;
        if (cp_empty.no > 0) _hit++;
        if (cp_full.yes > 0) _hit++;
        if (cp_full.no > 0) _hit++;
        harc_rt::log::harc_print_covergroup_summary("FifoCov", _hit, _total);
        harc_rt::log::harc_print_covergroup_bin("cp_empty", "yes", cp_empty.yes);
        harc_rt::log::harc_print_covergroup_bin("cp_empty", "no", cp_empty.no);
        harc_rt::log::harc_print_covergroup_bin("cp_full", "yes", cp_full.yes);
        harc_rt::log::harc_print_covergroup_bin("cp_full", "no", cp_full.no);
        {
            uint64_t _cross_hit = 0;
            uint64_t _cross_missing = 0;
            for (size_t _i = 0; _i < 2; ++_i) for (size_t _j = 0; _j < 2; ++_j) if (_auto_cross_cp_empty__cp_full[_i][_j] > 0) _cross_hit++;
            harc_rt::log::harc_print_covergroup_cross_summary("FifoCov", "auto_cross", "cp_empty x cp_full", _cross_hit, 4);
            if (_auto_cross_cp_empty__cp_full[0][0] == 0) { if (_cross_missing < 16) harc_rt::log::harc_print_covergroup_missing_bin("cp_empty.yes x cp_full.yes"); _cross_missing++; }
            if (_auto_cross_cp_empty__cp_full[0][1] == 0) { if (_cross_missing < 16) harc_rt::log::harc_print_covergroup_missing_bin("cp_empty.yes x cp_full.no"); _cross_missing++; }
            if (_auto_cross_cp_empty__cp_full[1][0] == 0) { if (_cross_missing < 16) harc_rt::log::harc_print_covergroup_missing_bin("cp_empty.no x cp_full.yes"); _cross_missing++; }
            if (_auto_cross_cp_empty__cp_full[1][1] == 0) { if (_cross_missing < 16) harc_rt::log::harc_print_covergroup_missing_bin("cp_empty.no x cp_full.no"); _cross_missing++; }
            harc_rt::log::harc_print_covergroup_more_missing(_cross_missing, 16, "auto-cross");
        }
    }
};

struct SyncFifoTb {
    VTxQueue* dut = nullptr;
    FifoCov cov;
    uint64_t _last_in_cycle = 0;
    uint64_t _last_out_cycle = 0;
};

struct HarcTestContext {
    VTxQueue* dut = nullptr;
#if HARC_TRACE_ENABLED
    HarcTraceC* tfp = nullptr;
    std::string _wave_path;
#endif
    uint64_t _trace_time = 0;
    int errors = 0;
    bool _fatal = false;
    int cycle_count = 0;
    harc_rt::trace::HarcTraceWriter trace;
    harc_rt::log::HarcLogContext log_ctx;
    std::vector<std::function<void()>> _checkers;
    std::vector<std::function<void()>> _post_eval_services;
    std::vector<std::function<void()>> _auto_cov_reports;
};

int run_SyncFifoTest(int argc, char** argv) {
    Verilated::commandArgs(argc, argv);
    HarcTestContext ctx;
    ctx.dut = new VTxQueue;
    auto*& dut = ctx.dut;
#if HARC_TRACE_ENABLED
    auto*& tfp = ctx.tfp;
    auto& _wave_path = ctx._wave_path;
#endif
    auto& _trace_time = ctx._trace_time;
    auto& errors = ctx.errors;
    auto& _fatal = ctx._fatal;
    auto& cycle_count = ctx.cycle_count;
    auto& trace = ctx.trace;
    auto& log_ctx = ctx.log_ctx;
    auto& _checkers = ctx._checkers;
    auto& _post_eval_services = ctx._post_eval_services;
    auto& _auto_cov_reports = ctx._auto_cov_reports;
#if HARC_TRACE_ENABLED
    Verilated::traceEverOn(true);
    tfp = new HarcTraceC;
    _wave_path = harc_rt::log::harc_open_wave_trace(dut, tfp, harc_rt::log::harc_wave_default_name());
#endif

    harc_rng.seed_from_env();
    harc_rt::trace::harc_start_trace(trace, harc_rng.state, "TxQueue", "SyncFifoTest", cycle_count);
    auto _harc_trace_dump_next = [&](const char* clock, uint64_t clock_cycle) {
        uint64_t t = _trace_time++;
        trace.set_timing(t, clock, clock_cycle);
        HARC_RT_DUMP_WAVE_TRACE(tfp, t);
    };
    auto _harc_trace_dump_at = [&](uint64_t t, const char* clock, uint64_t clock_cycle) {
        trace.set_timing(t, clock, clock_cycle);
        HARC_RT_DUMP_WAVE_TRACE(tfp, t);
    };

    HARC_RT_LOG_WAVE_FILE(log_ctx.sim_log, _wave_path);


    auto tick = [&]() {
        _harc_eval_negedge(dut);
        _harc_trace_dump_next("clk", (uint64_t)cycle_count);
        _harc_eval_posedge(dut);
        _harc_trace_dump_next("clk", (uint64_t)(cycle_count + 1));
        cycle_count++;
        for (auto& _svc : _post_eval_services) _svc();
        if (!_post_eval_services.empty()) dut->eval();
        if (!_post_eval_services.empty()) _harc_trace_dump_next("clk", (uint64_t)cycle_count);
        for (auto& _c : _checkers) _c();
    };

    auto sim_logf_line = [&](FILE* f, const char* sev, const char* fmt, ...) {
        HARC_RT_LOG_FILE_ONLY_PRINTF(f, cycle_count, sev, fmt);
    };

    auto sim_log_line = [&](const char* sev, const char* fmt, ...) {
        HARC_RT_LOG_PRINTF(log_ctx.sim_log, &trace, cycle_count, sev, fmt);
    };

    sim_log_line("INFO", "seed=%llu", (long long)harc_rng.state);

    harc_rt::ThreadScheduler sched;
    SyncFifoTb _tb;
    _checkers.push_back([&]() {
        bool _cg_hit_cp_empty[2] = {};
        bool _cg_hit_cp_full[2] = {};
        {
            uint64_t _v = (uint64_t)(harc_rt::harc_read(dut->empty));
            if (((_v == 1))) { _tb.cov.cp_empty.yes++; _cg_hit_cp_empty[0] = true; }
            if (((_v == 0))) { _tb.cov.cp_empty.no++; _cg_hit_cp_empty[1] = true; }
        }
        {
            uint64_t _v = (uint64_t)(harc_rt::harc_read(dut->full));
            if (((_v == 1))) { _tb.cov.cp_full.yes++; _cg_hit_cp_full[0] = true; }
            if (((_v == 0))) { _tb.cov.cp_full.no++; _cg_hit_cp_full[1] = true; }
        }
        for (size_t _i = 0; _i < 2; ++_i) {
            for (size_t _j = 0; _j < 2; ++_j) {
                if (_cg_hit_cp_empty[_i] && _cg_hit_cp_full[_j]) _tb.cov._auto_cross_cp_empty__cp_full[_i][_j]++;
            }
        }
    });
    harc_rt::ThreadSlot _run_slot;
    sched.slots.push_back(&_run_slot);
    _run_slot.thread = [&](harc_rt::ThreadSlot* _slot) -> harc_rt::HarcThread {
        _tb.dut = dut;
        { // run_SyncFifoTest (TB-IR loop-switch)
            uint64_t i = 0; (void)i;
            uint64_t i_2 = 0; (void)i_2;
            uint64_t expected = 0; (void)expected;
            int __bb = 0;
            bool __done = false;
            while (!__done) {
                switch (__bb) {
                case 0: {
                    harc_rt::harc_assign(dut->rst, 1);
                    harc_rt::harc_assign(dut->push_valid, 0);
                    harc_rt::harc_assign(dut->pop_ready, 0);
                    harc_rt::harc_assign(dut->push_data, 0);
                    co_await harc_rt::wait_cycles(_slot, (uint32_t)(2));
                    __bb = 1;
                    break;
                }
                case 1: {
                    if (!((harc_rt::harc_read(dut->empty) == 1))) {
                        sim_log_line("FAIL", "after reset, empty should be 1");
                        ctx.errors++;
                    }
                    if (!((harc_rt::harc_read(dut->full) == 0))) {
                        sim_log_line("FAIL", "after reset, full should be 0");
                        ctx.errors++;
                    }
                    sim_log_line("INFO", "PASS: reset Ã¢ÂÂ empty FIFO");
                    harc_rt::harc_assign(dut->rst, 0);
                    i = 0;
                    __bb = 2;
                    break;
                }
                case 2: {
                    if ((i <= 15)) { __bb = 3; } else { __bb = 5; }
                    break;
                }
                case 3: {
                    harc_rt::harc_assign(dut->push_valid, 1);
                    harc_rt::harc_assign(dut->push_data, (i + 1));
                    harc_rt::harc_assign(dut->pop_ready, 0);
                    if (!((harc_rt::harc_read(dut->push_ready) == 1))) {
                        sim_log_line("FAIL", "FIFO unexpectedly full at push %lld", harc_rt::harc_printf_ll(i));
                        ctx.errors++;
                    }
                    co_await harc_rt::wait_cycles(_slot, (uint32_t)(1));
                    __bb = 6;
                    break;
                }
                case 4: {
                    i = (i + 1);
                    __bb = 2;
                    break;
                }
                case 5: {
                    harc_rt::harc_assign(dut->push_valid, 0);
                    co_await harc_rt::wait_cycles(_slot, (uint32_t)(1));
                    __bb = 7;
                    break;
                }
                case 6: {
                    __bb = 4;
                    break;
                }
                case 7: {
                    if (!((harc_rt::harc_read(dut->full) == 1))) {
                        sim_log_line("FAIL", "FIFO should be full after 16 pushes");
                        ctx.errors++;
                    }
                    if (!((harc_rt::harc_read(dut->push_ready) == 0))) {
                        sim_log_line("FAIL", "push_ready should be 0 when full");
                        ctx.errors++;
                    }
                    sim_log_line("INFO", "PASS: FIFO full after 16 pushes");
                    i_2 = 0;
                    __bb = 8;
                    break;
                }
                case 8: {
                    if ((i_2 <= 15)) { __bb = 9; } else { __bb = 11; }
                    break;
                }
                case 9: {
                    harc_rt::harc_assign(dut->pop_ready, 1);
                    if (!((harc_rt::harc_read(dut->pop_valid) == 1))) {
                        sim_log_line("FAIL", "pop_valid unexpectedly low at pop %lld", harc_rt::harc_printf_ll(i_2));
                        ctx.errors++;
                    }
                    expected = (i_2 + 1);
                    if (!((harc_rt::harc_read(dut->pop_data) == expected))) {
                        sim_log_line("FAIL", "pop %lld: got %lld, expected %lld", harc_rt::harc_printf_ll(i_2), harc_rt::harc_printf_ll(harc_rt::harc_read(dut->pop_data)), harc_rt::harc_printf_ll(expected));
                        ctx.errors++;
                    }
                    co_await harc_rt::wait_cycles(_slot, (uint32_t)(1));
                    __bb = 12;
                    break;
                }
                case 10: {
                    i_2 = (i_2 + 1);
                    __bb = 8;
                    break;
                }
                case 11: {
                    harc_rt::harc_assign(dut->pop_ready, 0);
                    co_await harc_rt::wait_cycles(_slot, (uint32_t)(1));
                    __bb = 13;
                    break;
                }
                case 12: {
                    __bb = 10;
                    break;
                }
                case 13: {
                    if (!((harc_rt::harc_read(dut->empty) == 1))) {
                        sim_log_line("FAIL", "FIFO should be empty after popping all items");
                        ctx.errors++;
                    }
                    sim_log_line("INFO", "PASS: 16 items popped in FIFO order, empty after drain");
                    __done = true;
                    break;
                }
                default: __done = true; break;
                }
            }
        }
        { // check_SyncFifoTest (TB-IR loop-switch)
            int __bb = 0;
            bool __done = false;
            while (!__done) {
                switch (__bb) {
                case 0: {
                    _tb.cov.report();
                    if (!((_tb.cov.cp_empty.yes > 0))) {
                        sim_log_line("FAIL", "empty=1 coverage hole");
                        ctx.errors++;
                    }
                    if (!((_tb.cov.cp_full.yes > 0))) {
                        sim_log_line("FAIL", "full=1  coverage hole");
                        ctx.errors++;
                    }
                    __done = true;
                    break;
                }
                default: __done = true; break;
                }
            }
        }
        co_return;
    }(&_run_slot);

    // Resume each coroutine once so initial-setup statements run
    // before the first clock edge. Single-threaded — workers
    // haven't been spawned yet.
    sched.bootstrap();

    // Drive the clock until the run coroutine completes.
    //
    // `wait N cycles` matches Verilog's `@(posedge clk)` semantic:
    // values set in the segment BEFORE the wait are sampled at the
    // next posedge. Per loop iteration:
    //   1. Posedge (clk 0→1, eval) — DUT FFs latch the current input
    //      values (set in the previous segment, or in bootstrap on
    //      the first iteration).
    //   2. `sched.tick()` — advance the run coroutine to its next
    //      wait, setting the inputs for the NEXT cycle's posedge.
    //   3. Falling edge (clk 1→0, eval) — comb re-settles with the
    //      newly-set inputs.
    //   4. Cycle counter + checkers.
    // One initial `eval(clk=0)` before the loop settles combinational
    // logic with the bootstrap inputs — same role as `initial`-block
    // settle in Verilog. Each `wait 1 cycle` then maps to exactly
    // one posedge that observes the just-set values.
    _harc_eval_negedge(dut);
    _harc_trace_dump_next("clk", (uint64_t)cycle_count);
    while (_run_slot.kind != harc_rt::WaitKind::Done && !_fatal) {
        _harc_eval_posedge(dut);
        _harc_trace_dump_next("clk", (uint64_t)(cycle_count + 1));
        cycle_count++;
        for (auto& _svc : _post_eval_services) _svc();
        if (!_post_eval_services.empty()) dut->eval();
        if (!_post_eval_services.empty()) _harc_trace_dump_next("clk", (uint64_t)cycle_count);
        sched.tick();
        _harc_eval_negedge(dut);
        _harc_trace_dump_next("clk", (uint64_t)cycle_count);
        for (auto& _c : _checkers) _c();
    }


    for (auto& _r : _auto_cov_reports) _r();
    dut->final();
    HARC_RT_WRITE_COVERAGE(Verilated::threadContextp()->coveragep());
    HARC_RT_CLOSE_WAVE_TRACE(tfp);
    delete dut;

    return harc_rt::log::harc_finish_sim_run(log_ctx, trace, cycle_count, errors);
}

int main(int argc, char** argv) {
    const char* test_sel = harc_rt::log::harc_select_test(argc, argv);
    if (!test_sel) return run_SyncFifoTest(argc, argv);
    if (std::strcmp(test_sel, "SyncFifoTest") == 0) return run_SyncFifoTest(argc, argv);
    harc_rt::log::harc_report_unknown_test(test_sel, "SyncFifoTest");
    return 1;
}
