tests/snapshots/tbir__testbench_basic_dump_ir.snap
---
source: tests/tbir.rs
expression: "format!(\"{prog}\")"
---
tb-ir program
  testbench tb0 CounterTb { dut: Top }
  testbench tb1 CounterTb { dut: Top }
  testbench tb2 CounterTb { dut: Top }
  test TestbenchEnableToggle tb=tb0 run=fn3 check=-
  test TestbenchMethodCallsMethod tb=tb1 run=fn4 check=-
  test TestbenchSmoke tb=tb2 run=fn5 check=-

fn fn0 tb_method_0_reset [kind=TestbenchMethod(tbt0)]
  entry = b0

  b0:
    DutWrite(dut.rst, 1)
    DutWrite(dut.en, 0)
    -> WaitCycles(2, b1)

  b1:
    DutWrite(dut.rst, 0)
    -> WaitCycles(1, b2)

  b2:
    -> Return

fn fn1 tb_method_0_bump [kind=TestbenchMethod(tbt0)]
  params:
    n : uint<32>
  locals:
    %0 n : uint<32>
  entry = b0

  b0:
    DutWrite(dut.en, 1)
    -> WaitCycles(%n, b1)

  b1:
    DutWrite(dut.en, 0)
    -> Return

fn fn2 tb_method_0_bump_twice [kind=TestbenchMethod(tbt0)]
  params:
    n : uint<32>
  locals:
    %0 n : uint<32>
  entry = b0

  b0:
    TestbenchCall(fn1(%n))
    TestbenchCall(fn1(%n))
    -> Return

fn fn3 run_TestbenchEnableToggle [kind=Run, owner=tb0]
  locals:
    %0 frozen : unknown
  entry = b0

  b0:
    TestbenchCall(fn0())
    TestbenchCall(fn1(3))
    -> WaitCycles(3, b1)

  b1:
    DutRead(%frozen, dut.count_out)
    -> WaitCycles(5, b2)

  b2:
    AssertCheck { cond: (dut.count_out == %frozen), on_fail: "toggle: count moved while en=0" }
    Log(info, "PASS: enable-toggle reuses CounterTb helpers")
    -> Return

fn fn4 run_TestbenchMethodCallsMethod [kind=Run, owner=tb1]
  entry = b0

  b0:
    TestbenchCall(fn0())
    TestbenchCall(fn2(2))
    AssertCheck { cond: (dut.count_out == 4), on_fail: "method-call-method: count_out=%lld, expected 4", dut.count_out }
    Log(info, "PASS: testbench method can call sibling method")
    -> Return

fn fn5 run_TestbenchSmoke [kind=Run, owner=tb2]
  entry = b0

  b0:
    TestbenchCall(fn0())
    TestbenchCall(fn1(5))
    AssertCheck { cond: (dut.count_out == 5), on_fail: "smoke: count_out=%lld, expected 5", dut.count_out }
    Log(info, "PASS: testbench-shared reset + bump")
    -> Return
